<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_textview">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="page_1_title">Username: %1$s</string>
    <string name="page_1_toolbar_title">Random number example</string>
    <string name="page_2_title">Page 2</string>
    <string name="page_2_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_log_in">LOG IN</string>
    <string name="login_sign_up">SIGN UP</string>
    <string name="login_terms_conditions">By joining you agree to our <u>Terms &amp; Conditions</u></string>
    <string name="login_required_field">All fields are required</string>
    <string name="login_wrong_username_format">Wrong username format. Example format: example@domain.com</string>
    <string name="login_error_username_password">Incorrect username or password</string>
    <string name="login_error_service_message">There is something wrong with the service</string>
    <string name="login_google_not_completed_message">You must be signed up before with the same email</string>
    <string name="login_google_not_completed_error_message">Your Log In process by Google was not finished</string>
    <string name="fragment_youtube_empty_search_text">You must write something to search</string>
    <string name="network_error_message">Please verify your network connection</string>
    <string name="home_title_wolox">Wolox</string>
    <string name="home_tab_news">NEWS</string>
    <string name="home_tab_profile">PROFILE</string>
    <string name="home_tab_youtube">YOUTUBE</string>
    <string name="new_detail_post_title">Post</string>
    <string name="reg_pattern_protocol">^http:?:</string>
    <string name="reg_pattern_years">\w*(years ago|year ago)</string>
    <string name="reg_pattern_months">\w*(month ago|months ago)</string>
    <string name="reg_pattern_weeks">\w*(week ago|weeks ago)</string>
    <string name="reg_pattern_days">\w*(days ago|day ago)</string>
    <string name="reg_pattern_hours">\w*(hours ago|hour ago)</string>
    <string name="reg_pattern_minuts">\w*(minutes ago|minute ago|minute from now)</string>
    <string name="reg_pattern_now">\w*(moments ago|moments from now)</string>
    <string name="allow_protocol">https:</string>
    <string name="year_replacement">Y</string>
    <string name="month_replacement">M</string>
    <string name="week_replacement">W</string>
    <string name="day_replacement">D</string>
    <string name="hour_replacement">h</string>
    <string name="minuts_replacement">m</string>
    <string name="now_replacement">Now</string>
    <string name="ISO_8601_24h_full_format">yyyy-MM-dd\'T\'HH:mm:ss.SSSXXX</string>
</resources>