<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/vLoginBackgroundTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:srcCompat="@drawable/login_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <View
        android:id="@+id/vLoginGradient"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_none"
        android:alpha="0.8"
        android:background="@drawable/gradient_background_top"
        app:layout_constraintBottom_toBottomOf="@id/vLoginBackgroundTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/vLoginLogoLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium_more"
        android:layout_marginTop="@dimen/spacing_largest_extra_image"
        android:layout_marginEnd="@dimen/spacing_medium_more"
        app:layout_constraintEnd_toEndOf="@+id/vLoginBackgroundTop"
        app:layout_constraintStart_toStartOf="@+id/vLoginBackgroundTop"
        app:layout_constraintTop_toTopOf="@+id/vLoginBackgroundTop"
        app:srcCompat="@drawable/wolox_logo_large"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_none"
        android:layout_marginEnd="@dimen/spacing_large"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vLoginLogoLarge">

        <EditText
            android:id="@+id/vLoginUsername"
            style="@style/styleBigSpacing"
            android:ems="@integer/ems_default"
            android:hint="@string/login_username"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/vLoginPassword"
            style="@style/styleBigSpacing"
            android:ems="@integer/ems_default"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/vLoginButton"
            style="@style/styleBigSpacing"
            android:text="@string/login_log_in" />

        <Button
            android:id="@+id/vSignupButton"
            style="@style/styleBigSpacing"
            android:background="@drawable/button_blue"
            android:text="@string/login_sign_up"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <TextView
        android:id="@+id/vLoginTermsConditions"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_none"
        android:gravity="center"
        android:text="@string/login_terms_conditions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/styleMediumSpacing"/>

    <ProgressBar
        android:id="@+id/vLoginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium_more"
        android:layout_marginTop="@dimen/spacing_medium_more"
        android:layout_marginEnd="@dimen/spacing_medium_more"
        android:layout_marginBottom="@dimen/spacing_medium_more"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/vLoginTermsConditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="?android:attr/progressBarStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>